# rust-demo

./: .gitignore  Cargo.toml  README.md
demo/: Cargo.toml
demo/src/: main.rs
demo/src/demo1/: mod.rs  secret_number.rs
demo/tests/: test.rs
src/: main.rs  secret_number.rs
web/: Cargo.toml
web/src/: main.rs
web/src/core/: api.rs  mod.rs
web/src/hello/: hello_controller.rs  mod.rs
web/src/index/: index_controller.rs  mod.rs
web/src/user/: mod.rs  user_controller.rs  user_model.rs  user_service.rs
