[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.3.50"
poem-openapi = { version = "2.0.21", features = ["swagger-ui", "email"] }
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread", "sync"] }
serde = "1.0.148"
slab = "0.4.7"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
lazy_static = "1.4.0"